cleaned up OnlinePearls.java